test_regress/t/t_tagged_case.out
%Warning-SHORTREAL: t/t_tagged_case.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error: t/t_tagged_case.v:126:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  126 |       tagged Valid .n : result = n;
      |       ^~~~~~
        t/t_tagged_case.v:126:20: ... Resolving this reference
  126 |       tagged Valid .n : result = n;
      |                    ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_case.v:126:34: Can't find definition of variable: 'n'
  126 |       tagged Valid .n : result = n;
      |                                  ^
%Error: t/t_tagged_case.v:135:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  135 |       tagged Valid .n : result = n;
      |       ^~~~~~
        t/t_tagged_case.v:135:20: ... Resolving this reference
  135 |       tagged Valid .n : result = n;
      |                    ^
%Error: t/t_tagged_case.v:144:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  144 |       tagged Wide60 .w : wide60_result = w;
      |       ^~~~~~
        t/t_tagged_case.v:144:21: ... Resolving this reference
  144 |       tagged Wide60 .w : wide60_result = w;
      |                     ^
%Error: t/t_tagged_case.v:144:42: Can't find definition of variable: 'w'
                                : ... Suggested alternative: 'wt'
  144 |       tagged Wide60 .w : wide60_result = w;
      |                                          ^
%Error: t/t_tagged_case.v:154:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  154 |       tagged Wide90 .w : wide90_result = w;
      |       ^~~~~~
        t/t_tagged_case.v:154:21: ... Resolving this reference
  154 |       tagged Wide90 .w : wide90_result = w;
      |                     ^
%Error: t/t_tagged_case.v:163:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  163 |       tagged Byte8NonZeroLSB .b : result = b;
      |       ^~~~~~
        t/t_tagged_case.v:163:30: ... Resolving this reference
  163 |       tagged Byte8NonZeroLSB .b : result = b;
      |                              ^
%Error: t/t_tagged_case.v:163:44: Can't find definition of variable: 'b'
  163 |       tagged Byte8NonZeroLSB .b : result = b;
      |                                            ^
%Error: t/t_tagged_case.v:172:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  172 |       tagged Word32LittleEndian .w : result = w;
      |       ^~~~~~
        t/t_tagged_case.v:172:33: ... Resolving this reference
  172 |       tagged Word32LittleEndian .w : result = w;
      |                                 ^
%Error: t/t_tagged_case.v:182:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  182 |       tagged Scalar .s : result = s;
      |       ^~~~~~
        t/t_tagged_case.v:182:21: ... Resolving this reference
  182 |       tagged Scalar .s : result = s;
      |                     ^
%Error: t/t_tagged_case.v:182:35: Can't find definition of variable: 's'
                                : ... Suggested alternative: 'st'
  182 |       tagged Scalar .s : result = s;
      |                                   ^
%Error: t/t_tagged_case.v:183:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  183 |       tagged Arr .a : result = a[0] + a[1] + a[2] + a[3];
      |       ^~~~~~
        t/t_tagged_case.v:183:18: ... Resolving this reference
  183 |       tagged Arr .a : result = a[0] + a[1] + a[2] + a[3];
      |                  ^
%Error: t/t_tagged_case.v:183:32: Can't find definition of variable: 'a'
                                : ... Suggested alternative: 'at'
  183 |       tagged Arr .a : result = a[0] + a[1] + a[2] + a[3];
      |                                ^
%Error: t/t_tagged_case.v:192:19: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  192 |       tagged Jmp (tagged JmpU .a) : result = a;
      |                   ^~~~~~
        t/t_tagged_case.v:192:31: ... Resolving this reference
  192 |       tagged Jmp (tagged JmpU .a) : result = a;
      |                               ^
%Error: t/t_tagged_case.v:212:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  212 |       tagged Obj .o : result = o.value;
      |       ^~~~~~
        t/t_tagged_case.v:212:18: ... Resolving this reference
  212 |       tagged Obj .o : result = o.value;
      |                  ^
%Error: t/t_tagged_case.v:212:32: Can't find definition of scope/variable: 'o'
  212 |       tagged Obj .o : result = o.value;
      |                                ^
%Error: t/t_tagged_case.v:221:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  221 |       tagged RealVal .r : result = 2;
      |       ^~~~~~
        t/t_tagged_case.v:221:22: ... Resolving this reference
  221 |       tagged RealVal .r : result = 2;
      |                      ^
%Error: t/t_tagged_case.v:222:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  222 |       tagged ShortRealVal .r : result = 3;
      |       ^~~~~~
        t/t_tagged_case.v:222:27: ... Resolving this reference
  222 |       tagged ShortRealVal .r : result = 3;
      |                           ^
%Error: t/t_tagged_case.v:230:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  230 |       tagged RealVal .r : begin
      |       ^~~~~~
        t/t_tagged_case.v:230:22: ... Resolving this reference
  230 |       tagged RealVal .r : begin
      |                      ^
%Error: t/t_tagged_case.v:231:13: Can't find definition of variable: 'r'
                                : ... Suggested alternative: 'rt'
  231 |         if (r == 3.14159) result = 1;
      |             ^
%Error: t/t_tagged_case.v:234:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  234 |       tagged ShortRealVal .r : result = 3;
      |       ^~~~~~
        t/t_tagged_case.v:234:27: ... Resolving this reference
  234 |       tagged ShortRealVal .r : result = 3;
      |                           ^
%Error: t/t_tagged_case.v:243:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  243 |       tagged RealVal .r : result = 2;
      |       ^~~~~~
        t/t_tagged_case.v:243:22: ... Resolving this reference
  243 |       tagged RealVal .r : result = 2;
      |                      ^
%Error: t/t_tagged_case.v:244:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  244 |       tagged ShortRealVal .r : begin
      |       ^~~~~~
        t/t_tagged_case.v:244:27: ... Resolving this reference
  244 |       tagged ShortRealVal .r : begin
      |                           ^
%Error: t/t_tagged_case.v:256:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  256 |       tagged StrVal .s : result = 2;
      |       ^~~~~~
        t/t_tagged_case.v:256:21: ... Resolving this reference
  256 |       tagged StrVal .s : result = 2;
      |                     ^
%Error: t/t_tagged_case.v:264:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  264 |       tagged StrVal .s : begin
      |       ^~~~~~
        t/t_tagged_case.v:264:21: ... Resolving this reference
  264 |       tagged StrVal .s : begin
      |                     ^
%Error: t/t_tagged_case.v:276:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  276 |       tagged ColorVal .c : result = 2;
      |       ^~~~~~
        t/t_tagged_case.v:276:23: ... Resolving this reference
  276 |       tagged ColorVal .c : result = 2;
      |                       ^
%Error: t/t_tagged_case.v:284:7: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  284 |       tagged ColorVal .c : begin
      |       ^~~~~~
        t/t_tagged_case.v:284:23: ... Resolving this reference
  284 |       tagged ColorVal .c : begin
      |                       ^
%Error: t/t_tagged_case.v:285:13: Can't find definition of variable: 'c'
  285 |         if (c == GREEN) result = 1;
      |             ^
%Error: Exiting due to
